--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   border:0;
-  background:#000;
+  background:#1C1F1F;
 }
 
 #logo {
@@ -11,6 +11,8 @@ body {
   -moz-transition:0.8s;
   -webkit-transition:0.8s;
   transition:0.8s;
+  background:#000;
+  padding:10px;
 }
 
 #logo:hover {
