--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,18 @@ body {
 }
 
 .wrap {
-  width:200px;
-  margin-top:350px;
+  width:250px;
   margin-left:auto;
   margin-right:auto;
 }
 
 .data {
-  font-size:5px;
+  font-size:8px;
   font-family: 'Share Tech Mono', monospace ;
 }
 
 #logo {
-  margin:0 0 20px 0;
+  margin: 20px 0;
   width: 100%;
   opacity: 0.2;
   -o-transition:0.8s;
@@ -25,6 +24,7 @@ body {
   transition:0.8s;
   background:#000;
   padding:10px;
+  box-sizing:border-box;
 }
 
 #logo:hover {
