--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,24 @@ body {
 }
 
 .wrap {
-  width:250px;
+  max-width:1000px;
   margin-left:auto;
   margin-right:auto;
 }
 
+.col {
+  width:25%;
+  float:left;
+}
+
+.padding {
+  padding:10px;
+}
+
 .data {
   font-size:8px;
-  font-family: 'Share Tech Mono', monospace ;
+  font-family: 'Share Tech Mono', monospace;
+  word-break: break-all;
 }
 
 #logo {
