--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,25 @@ body {
 h1 {
   font-family: 'Share Tech Mono', monospace;
   color:#D5D5D5;
-  font-size:30px;
+  font-size: 10px;
+  margin: 0;
+}
+
+hr {
+  border:0;
+  background:transparent;
+  width:100%;
+  border-bottom:1px dashed #fff;
+  margin:10px 0;
 }
 
 #logo {
-  margin: 20px 0;
+  margin-bottom: 20px;
   width: 100%;
   background:#000;
   padding:10px;
   box-sizing:border-box;
+  cursor:pointer;
 }
 
 #logo img {
