--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
+html {
+  height:100%;
+}
+
 body {
   border:0;
   background:#1C1F1F;
-  heightL:100%;
+  height:100%;
 }
 
 .wrap {
@@ -17,6 +21,19 @@ body {
   height:100%;
   overflow:auto;
   margin-right:30px;
+}
+
+.col::-webkit-scrollbar {
+    width:5px;
+    margin-left:15px;
+}
+
+.col::-webkit-scrollbar-track {
+    background:transparent;
+}
+
+.col::-webkit-scrollbar-thumb {
+    background-color:#D5D5D5;
 }
 
 .padding {
