--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,9 @@ h1 {
   font-size: 10px;
   margin: 0;
   line-height: 15px;
+  background: #000;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 hr {
