--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .col {
-  width:c25%;
+  width:25%;
   float:left;
   height:100%;
   overflow:auto;
@@ -55,13 +55,14 @@ body {
 }
 
 .img .caption {
-  position:relative;
+  position:absolute;
+  left:0;
   top:30px;
-  padding:20px;
+  padding:10px;
   width:100%;
   box-sizing: border-box;
   color:#fff;
-  background:rgba(0, 0, 0, 0.4);
+  background:rgba(0, 0, 0, 0.6);
 }
 
 h1 {
