--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ a {
 a.link {
   padding:10px;
   background:#000;
-  color:#D5D5D5;
+  color:#2B2B2B;
+  text-decoration:none;
   font-family: 'Share Tech Mono', monospace;
   font-size:20px;
   letter-spacing:-1px;
