--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,16 @@ a.link:hover {
   box-sizing: border-box;
   background: #D5D5D5;
   position:relative;
+  opacity: 0.7;
+  cursor:pointer;
+  -o-transition:0.8s;
+  -moz-transition:0.8s;
+  -webkit-transition:0.8s;
+  transition:0.8s;
+}
+
+.img:hover {
+  opacity:1;
 }
 
 .img .caption {
