--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ body {
 .col {
   width:25%;
   float:left;
-  height:100%;
   overflow:auto;
 }
 
@@ -146,12 +145,10 @@ a.link:hover {
 }
 
 h1 {
-  color: #D5D5D5;
+  color: #000;
   font-size: 20px;
   margin: 0;
   line-height: 30px;
-  background: #000;
-  padding: 10px;
   box-sizing: border-box;
 }
 
