--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*///////////////////////
+//// DATAG.HOST STYLES
+///////////////////////*/
+
+/* -- CORE STRUCTURE -- */
+
 html {
   height:100%;
 }
@@ -23,6 +29,18 @@ body {
   overflow:auto;
 }
 
+.padding {
+  padding:10px;
+  box-sizing:border-box;
+}
+
+.big-padding {
+  padding:60px;
+  box-sizing:border-box;
+}
+
+/* -- LINKS -- */
+
 a {
   cursor:pointer;
 }
@@ -45,6 +63,8 @@ a.link:hover {
   color:#fff;
 }
 
+/* -- SCROLLBARS -- */
+
 .col::-webkit-scrollbar {
     width:4px;
     margin-right:15px;
@@ -57,6 +77,77 @@ a.link:hover {
 .col::-webkit-scrollbar-thumb {
     background-color:#444444;
 }
+
+/* -- TYPOGRAPHY -- */
+
+h1 {
+  color: #000;
+  font-size: 20px;
+  margin: 0;
+  line-height: 30px;
+  box-sizing: border-box;
+}
+
+h2 {
+  color:#D4D4D4;
+  font-size:14px;
+  text-transform:uppercase;
+  -o-transition:0.8s;
+  -moz-transition:0.8s;
+  -webkit-transition:0.8s;
+  transition:0.8s;
+}
+
+h2 hr {
+  border:0;
+  background:#606060;
+  height:3px;
+  width:30px;
+  -o-transition:0.8s;
+  -moz-transition:0.8s;
+  -webkit-transition:0.8s;
+  transition:0.8s;
+}
+
+hr {
+  border:0;
+  background:transparent;
+  width:100%;
+  border-bottom:1px dashed #000;
+  margin:20px 0;
+}
+
+/* -- IMGS -- */
+
+img {
+  max-width:100%;
+  height:auto;
+}
+
+/* -- LOGO -- */
+
+#logo {
+  margin-bottom: 20px;
+  width: 100%;
+  background:#000;
+  padding:10px;
+  box-sizing:border-box;
+  cursor:pointer;
+}
+
+#logo img {
+  opacity: 0.2;
+  -o-transition:0.8s;
+  -moz-transition:0.8s;
+  -webkit-transition:0.8s;
+  transition:0.8s;
+}
+
+#logo img:hover {
+  opacity:1;
+}
+
+/* -- GALLERY -- */
 
 #gallery {
   height:100%;
@@ -98,15 +189,7 @@ a.link:hover {
   height:100%;
 }
 
-.padding {
-  padding:10px;
-  box-sizing:border-box;
-}
-
-.big-padding {
-  padding:60px;
-  box-sizing:border-box;
-}
+/* -- CONTENT -- */
 
 .data {
   font-size:8px;
@@ -144,44 +227,38 @@ a.link:hover {
   background:rgba(0, 0, 0, 0.6);
 }
 
-h1 {
-  color: #000;
-  font-size: 20px;
-  margin: 0;
-  line-height: 30px;
-  box-sizing: border-box;
-}
-
-hr {
-  border:0;
-  background:transparent;
+.sound {
   width:100%;
-  border-bottom:1px dashed #000;
   margin:20px 0;
-}
-
-#logo {
-  margin-bottom: 20px;
-  width: 100%;
-  background:#000;
-  padding:10px;
-  box-sizing:border-box;
+  padding: 20px;
+  box-sizing: border-box;
+  background: #000;
+  position:relative;
+  opacity: 0.7;
   cursor:pointer;
-}
-
-#logo img {
-  opacity: 0.2;
   -o-transition:0.8s;
   -moz-transition:0.8s;
   -webkit-transition:0.8s;
   transition:0.8s;
 }
 
-#logo img:hover {
-  opacity:1;
+.sound .info {
+  font-size:8px;
+  font-family: 'Share Tech Mono', monospace;
+  word-break: break-all;
+  color:#606060;
 }
 
-img {
-  max-width:100%;
-  height:auto;
+.sound .info-wrap {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+
+.sound:hover h2 {
+  color:#fff;
+}
+
+.sound:hover h2 hr {
+  background:#D4D4D4;
 }
