--- a/css/style.css
+++ b/css/style.css
@@ -9,28 +9,35 @@ html {
 }
 
 body {
-  border:0;
+  margin:0;
   background:#1C1F1F;
   height:100%;
   font-family: 'Roboto', sans-serif;
   font-weight:700;
 }
 
+#head {
+  overflow: hidden;
+  border-bottom:1px solid #292C2C;
+  height:130px;
+}
+
 .wrap {
-  max-width:1000px;
+  max-width:1200px;
+  padding-left:100px;
   margin-left:auto;
   margin-right:auto;
   height:100%;
 }
 
 .col {
-  width:25%;
+  width:33.333333333333333333%;
   float:left;
   overflow:auto;
 }
 
 .padding {
-  padding:10px;
+  padding:20px;
   box-sizing:border-box;
 }
 
@@ -57,6 +64,7 @@ a.link {
   -moz-transition:0.8s;
   -webkit-transition:0.8s;
   transition:0.8s;
+  display:block;
 }
 
 a.link:hover {
@@ -81,11 +89,19 @@ a.link:hover {
 /* -- TYPOGRAPHY -- */
 
 h1 {
-  color: #000;
+  color: #292C2C;
   font-size: 20px;
   margin: 0;
   line-height: 30px;
   box-sizing: border-box;
+  -o-transition:0.8s;
+  -moz-transition:0.8s;
+  -webkit-transition:0.8s;
+  transition:0.8s;
+}
+
+.col:hover h1 {
+  color:#D5D5D5;
 }
 
 h2 {
@@ -128,10 +144,11 @@ img {
 
 #logo {
   margin-bottom: 20px;
-  width: 100%;
-  background:#000;
-  padding:10px;
-  box-sizing:border-box;
+  width: 100px;
+  position: fixed;
+  left: 50%;
+  top: 157px;
+  margin-left: -630px;
   cursor:pointer;
 }
 
@@ -261,4 +278,31 @@ img {
 
 .sound:hover h2 hr {
   background:#D4D4D4;
+}
+
+.links {
+  width:100%;
+  margin:20px 0;
+}
+
+.text {
+  font-size: 12px;
+  font-family: 'Share Tech Mono', monospace;
+  word-break: break-all;
+  color: #606060;
+}
+
+/* -- MEDIA QUERIES -- */
+
+@media screen and ( max-width:1300px ) {
+  #logo {
+    left:0;
+    margin-left:0;
+  }
+}
+
+@media screen and ( max-width:500px ) {
+  .col {
+    width:100%;
+  }
 }
