--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,84 @@ body {
 
 #head {
   overflow: hidden;
-  border-bottom:1px solid #292C2C;
   height:130px;
+  background:#000;
+  position:fixed;
+  top:0;
+  width:100%;
+  z-index:-1;
+  -o-transition:0.8s;
+  -moz-transition:0.8s;
+  -webkit-transition:0.8s;
+  transition:0.8s;
+}
+
+#head.terminal {
+  height:400px;
+  border-bottom: 1px solid #242727;
+}
+
+#terminal {
+  width: 100%;
+  height: 300px;
+  background-size: cover;
+  margin-top:40px;
+  border-radius:3px;
+  border-radius: 5px;
+  border: 1px solid #242727;
+  overflow:hidden;
+}
+
+#terminal .header {
+  padding:6px;
+  background:#D5D5D5;
+  overflow:hidden;
+}
+
+#terminal .header .circle-btn {
+  width:10px;
+  height:10px;
+  display:block;
+  float:left;
+  background:#1C1F1F;
+  margin-right:4px;
+  border-radius:50%;
+  overflow:hidden;
+}
+
+#terminal .window {
+  padding:8px;
+  height:100%;
+}
+
+#terminal .window form {
+  height:100%;
+}
+
+#terminal textarea {
+  border:0;
+  outline:0;
+  background:#000;
+  color:#fff;
+  font-size: 12px;
+  font-family: 'Share Tech Mono', monospace;
+  padding: 0;
+  width: 100%;
+  height:100%;
+}
+
+#content {
+  margin-top:130px;
+  background:#1C1F1F;
+  overflow:hidden;
+  -o-transition:0.8s;
+  -moz-transition:0.8s;
+  -webkit-transition:0.8s;
+  transition:0.8s;
+}
+
+#content.terminal {
+  margin-top:400px;
 }
 
 .wrap {
@@ -33,7 +109,11 @@ body {
 .col {
   width:33.333333333333333333%;
   float:left;
-  overflow:auto;
+}
+
+.col-2 {
+  width:66.666666666666666666%;
+  float:left;
 }
 
 .padding {
