--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,22 @@ body.visuals {
   background:#D5D5D5;
 }
 
+body.visuals #head .nav ul li a {
+  color:#000;
+}
+
 body.index #content {
+  background:#1C1F1F;
   margin-top:0;
-  height: 100%;
+  min-height: 100%;
+  margin-top:85px;
+  position:relative;
+  z-index:1000;
 }
 
 #head {
   overflow: hidden;
-  height:90px;
+  height:85px;
   position:fixed;
   top:0;
   width:100%;
@@ -38,9 +46,45 @@ body.index #content {
   transition: 0.8s;
 }
 
+#head .wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: horizontal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
 #head.terminal {
   height:400px;
   border-bottom: 1px solid #242727;
+}
+
+#head .nav {
+  -webkit-box-flex: 3;
+  -webkit-flex: 3;
+  -moz-box-flex: 3;
+  -moz-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+}
+
+#head .single-echo {
+  -webkit-box-flex: 2;
+  -webkit-flex: 2;
+  -moz-box-flex: 2;
+  -moz-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+  border-left: 1px solid;
 }
 
 #head .nav ul {
@@ -57,26 +101,26 @@ body.index #content {
 
 #head .nav ul li a {
   text-decoration:none;
-  color:#D5D5D5;
+  color: #606060;
   padding: 6px 0;
   margin-left:20px;
-  text-transform: uppercase;
-  font-size: 1.6em;
   letter-spacing: 1px;
-  opacity:0.5;
   -o-transition: color 0.8s;
   -moz-transition: color 0.8s;
   -webkit-transition: color 0.8s;
   transition: color 0.8s;
+  font-size: 12px;
+  font-family: 'Share Tech Mono', monospace;
+  font-weight:100;
 }
 
 #head .nav ul li a.active{
   color:#fff;
-  border-bottom:3px solid;
+  border-bottom:1px solid;
 }
 
 #head .nav ul li a:hover {
-  opacity:1;
+  color:#787A7A;
 }
 
 #terminal {
@@ -87,15 +131,12 @@ body.index #content {
   border-radius: 5px;
   overflow: hidden;
   position: absolute;
+  z-index:1000;
   top: 180px;
   width: 600px;
   left: 50%;
   margin-left: -300px;
   background:#000;
-  -o-transition: 0.8s;
-  -moz-transition: 0.8s;
-  -webkit-transition: 0.8s;
-  transition: 0.8s;
   -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.20);
   -mozbox-shadow: 0 0 30px rgba(0, 0, 0, 0.20);
   -ms-box-shadow: 0 0 30px rgba(0, 0, 0, 0.20);
@@ -314,8 +355,12 @@ img {
 /* -- LOGO -- */
 
 #logo {
-  width: 200px;
-  float:left;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 #logo img {
@@ -375,7 +420,7 @@ img {
 /* -- CONTENT -- */
 
 #back-visuals {
-  position:fixed;
+  position:static;
   top:0;
   left:0;
   bottom:0;
@@ -433,11 +478,20 @@ img {
 }
 
 .flex-item {
-  width:25%;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .echo:hover {
   color:#fff;
+}
+
+.echo .padding {
+  border-left:1px solid;
 }
 
 .data {
