--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,8 @@ img {
 }
 
 .player-controls .time span {
-  display:inline-block;
+  display:block;
+  float:left;
   padding:15px 20px;
   border-left: 1px solid;
 }
