--- a/dataghost-app/partials/header.html
+++ b/dataghost-app/partials/header.html
@@ -2,17 +2,17 @@
   <div class="wrap">
       <div id="logo">
         <div class="padding">
-          <a href="index.html">
-            <img src="img/dataghostlogo.svg">
+          <a href="/">
+            <img src="../assets/img/dataghostlogo.svg">
           </a>
         </div>
       </div>
       <div class="nav">
         <div class="padding">
           <ul>
-            <li><a href="visuals.html">visuals</a></li>
-            <li><a href="sounds.html">sounds</a></li>
-            <li><a href="echoes.html">echoes</a></li>
+            <li><a href="/visuals">visuals</a></li>
+            <li><a href="/sounds">sounds</a></li>
+            <li><a href="/echoes">echoes</a></li>
             <li id="terminal-button"><a id="toggle-terminal" href=""><i class="fa fa-terminal"></i>terminal</a></li>
           </ul>
         </div>
