--- a/dataghost-app/partials/visuals.html
+++ b/dataghost-app/partials/visuals.html
@@ -8,16 +8,16 @@
         <div id="visuals-wrapper" class="flex-wrap">
           <div class="flex-row">
             <div id="visual-1" class="img flex-item">
-              <img src="img/absenceofnoise-10.png">
+              <img src="../assets/img/absenceofnoise-10.png">
             </div>
             <div id="visual-2" class="img flex-item">
-              <img src="img/merger.png">
+              <img src="../assets/img/merger.png">
             </div>
             <div id="visial-3" class="img flex-item">
-              <img src="img/flyer.jpg">
+              <img src="../assets/img/flyer.jpg">
             </div>
             <div id="visual-4" class="img flex-item">
-              <img src="img/dataset.svg">
+              <img src="../assets/img/dataset.svg">
             </div>
           </div>
         </div>
