--- a/dataghost-app/partials/home.html
+++ b/dataghost-app/partials/home.html
@@ -1,8 +1,12 @@
+<ng-include src="header.html"></ng-include>
+
 <section id="content">
   <div id="back-visuals">
-    <img src="img/back-logo-sound.jpg">
-    <img src="img/back-glitch-1.jpg">
-    <img src="img/back-lines.jpg">
-    <img src="img/back-shift.jpg">
+    <img src="../assets/img/back-logo-sound.jpg">
+    <img src="../assets/img/back-glitch-1.jpg">
+    <img src="../assets/img/back-lines.jpg">
+    <img src="../assets/img/back-shift.jpg">
   </div>
 </section>
+
+<ng-include src="terminal.html"></ng-include>
