--- a/dataghost-app/partials/header.html
+++ b/dataghost-app/partials/header.html
@@ -3,7 +3,7 @@
       <div id="logo">
         <div class="padding">
           <a href="/">
-            <img src="../assets/img/dataghostlogo.svg">
+            <img src="../datag.host/dataghost-app/assets/img/dataghostlogo.svg">
           </a>
         </div>
       </div>
