--- a/dataghost-app/partials/home.html
+++ b/dataghost-app/partials/home.html
@@ -1,9 +1,9 @@
 
 <section id="content">
   <div id="back-visuals">
-    <img src="../dataghost-app/assets/img/back-logo-sound.jpg">
-    <img src="../dataghost-app/assets/img/back-glitch-1.jpg">
-    <img src="../dataghost-app/assets/img/back-lines.jpg">
-    <img src="../dataghost-app/assets/img/back-shift.jpg">
+    <img src="../datag.host/dataghost-app/assets/img/back-logo-sound.jpg">
+    <img src="../datag.host/dataghost-app/assets/img/back-glitch-1.jpg">
+    <img src="../datag.host/dataghost-app/assets/img/back-lines.jpg">
+    <img src="../datag.host/dataghost-app/assets/img/back-shift.jpg">
   </div>
 </section>
