--- a/dataghost-app/partials/header.html
+++ b/dataghost-app/partials/header.html
@@ -2,7 +2,7 @@
   <div class="wrap">
       <div id="logo">
         <div class="padding">
-          <a href="/">
+          <a href="/datag.host/">
             <img src="../datag.host/dataghost-app/assets/img/dataghostlogo.svg">
           </a>
         </div>
@@ -10,9 +10,9 @@
       <div class="nav">
         <div class="padding">
           <ul>
-            <li><a href="/visuals">visuals</a></li>
-            <li><a href="/sounds">sounds</a></li>
-            <li><a href="/echoes">echoes</a></li>
+            <li><a href="/datag.host/#/visuals">visuals</a></li>
+            <li><a href="/datag.host/#/sounds">sounds</a></li>
+            <li><a href="/datag.host/#/echoes">echoes</a></li>
             <li id="terminal-button"><a id="toggle-terminal" href=""><i class="fa fa-terminal"></i>terminal</a></li>
           </ul>
         </div>
