debug body class

--- a/dataghost-app/partials/sounds.html
+++ b/dataghost-app/partials/sounds.html
@@ -7,7 +7,7 @@
       </h1>
       <div id="05" class="sound">
           <div class="cover">
-            <img src="img/orb-crs-3.jpg">
+            <img src="../datag.host/dataghost-app/assets/img/orb-crs-3.jpg">
           </div>
           <div class="info-wrap">
             <h2>
