--- a/dataghost-app/partials/echoes.html
+++ b/dataghost-app/partials/echoes.html
@@ -8,7 +8,7 @@
       </div>
       <div id="echoes-wrapper" class="flex-wrap">
         <div class="flex-row">
-          <div ng-repeat="ech.echoes as echo" id="echo-{{ echo.ID }}" class="echo flex-item text">
+          <div ng-repeat="echo in ech.echoes" id="echo-{{ echo.ID }}" class="echo flex-item text">
             <div class="padding">
               {{ echo.text }}
             </div>
