--- a/dataghost-app/partials/home.html
+++ b/dataghost-app/partials/home.html
@@ -1,9 +1,5 @@
-
-<section id="content">
+<section id="content" ng-controller="mainCtrl as main">
   <div id="back-visuals">
-    <img src="../datag.host/dataghost-app/assets/img/back-logo-sound.jpg">
-    <img src="../datag.host/dataghost-app/assets/img/back-glitch-1.jpg">
-    <img src="../datag.host/dataghost-app/assets/img/back-lines.jpg">
-    <img src="../datag.host/dataghost-app/assets/img/back-shift.jpg">
+    <img ng-repeat="visual in main.main_visuals" src="{{ visual.url }}">
   </div>
 </section>
