fix controller bug

--- a/dataghost-app/partials/echoes.html
+++ b/dataghost-app/partials/echoes.html
@@ -1,4 +1,4 @@
-<div class="wrap" ng-controller="echoesCtrl as ech">
+<div class="wrap">
   <section id="content">
     <div id="echoes" class="content-type">
       <div class="padding">
