--- a/dataghost-app/partials/sounds.html
+++ b/dataghost-app/partials/sounds.html
@@ -1,4 +1,4 @@
-<div class="wrap" ng-controller="soundsCtrl as son">
+<div class="wrap">
   <section id="content">
   <div id="sounds" class="content-type">
     <div class="padding">
