--- a/dataghost-app/partials/home.html
+++ b/dataghost-app/partials/home.html
@@ -1,4 +1,4 @@
-<section id="content">
+<section id="content" ng-controller="indexCtrl as ind">
   <div id="back-visuals">
     <img ng-repeat="visual in mai.main_visuals" src="{{ visual.url }}">
   </div>
