--- a/dataghost-app/partials/visuals.html
+++ b/dataghost-app/partials/visuals.html
@@ -1,4 +1,4 @@
-<div class="wrap">
+<div class="wrap" ng-controller="visualsCtrl as vis">
   <section id="content">
     <div id="visuals" class="content-type">
       <div class="padding">
