--- a/dataghost-app/partials/home.html
+++ b/dataghost-app/partials/home.html
@@ -1,5 +1,5 @@
 <section id="content" ng-controller="indexCtrl as ind">
   <div id="back-visuals">
-    <img ng-repeat="visual in mai.main_visuals" src="{{ visual.url }}">
+    <img ng-repeat="visual in ind.main_visuals" src="{{ visual.url }}">
   </div>
 </section>
