--- a/dataghost-app/partials/sounds.html
+++ b/dataghost-app/partials/sounds.html
@@ -5,7 +5,7 @@
       <h1>
         SOUNDS<br>
       </h1>
-      <wavesurfer-angular url="url" options="options"></wavesurfer-angular>
+      <wavesurfer-angular url="sou.url" options="sou.options"></wavesurfer-angular>
       <div id="05" class="sound">
           <div class="cover">
             <img src="../datag.host/dataghost-app/assets/img/orb-crs-3.jpg">
