--- a/dataghost-app/partials/home.html
+++ b/dataghost-app/partials/home.html
@@ -1,5 +1,10 @@
 <section id="content" ng-controller="indexCtrl as ind">
+  <ul class="dots">
+    <li class="dot" ng-repeat="visual in ind.main_visuals">
+      <a href="#" ng-class="{'active':ind.isCurrentSlideIndex($index)}" ng-click="ind.setCurrentSlideIndex($index);"><i class="fa fa-circle-o"></i></a>
+    </li>
+  </ul>
   <div id="back-visuals">
-    <img ng-repeat="visual in ind.main_visuals" src="{{ visual.url }}">
+    <img ng-repeat="visual in ind.main_visuals" ng-hide="!ind.isCurrentSlideIndex($index)" src="{{ visual.url }}">
   </div>
 </section>
