--- a/dataghost-app/partials/home.html
+++ b/dataghost-app/partials/home.html
@@ -1,8 +1,5 @@
 <section id="content" ng-controller="indexCtrl as ind">
-  <div id="dots">
-    <a href="#" ng-repeat="visual in ind.main_visuals" class="dot" ng-class="{'active':ind.isCurrentSlideIndex($index)}" ng-click="ind.setCurrentSlideIndex($index);"><i class="fa fa-circle-o"></i></a>
-  <div>
   <div id="back-visuals">
-    <img ng-repeat="visual in ind.main_visuals" ng-hide="!ind.isCurrentSlideIndex($index)" src="{{ visual.url }}">
+    <img ng-repeat="visual in body.main_visuals" ng-hide="!body.isCurrentSlideIndex($index)" src="{{ visual.url }}">
   </div>
 </section>
