--- a/dataghost-app/css/style.css
+++ b/dataghost-app/css/style.css
@@ -94,6 +94,24 @@ body.index #ui-view {
   -moz-flex: 3;
   -ms-flex: 3;
   flex: 3;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+#head .nav div {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 #head .single-echo {
