--- a/dataghost-app/partials/header.html
+++ b/dataghost-app/partials/header.html
@@ -18,8 +18,10 @@
           </ul>
         </div>
         <div id="dots">
-          <a href="#" ng-repeat="visual in body.main_visuals" class="dot" ng-class="{'active':body.isCurrentSlideIndex($index)}" ng-click="body.setCurrentSlideIndex($index);"><i class="fa fa-circle-o"></i></a>
-        <div>
+          <a href="#" ng-repeat="visual in body.main_visuals" class="dot" ng-class="{'active':body.isCurrentSlideIndex($index)}" ng-click="body.setCurrentSlideIndex($index);">
+            <i class="fa fa-circle-o"></i>
+          </a>
+        </div>
       </div>
       <div class="single-echo text">
         <div class="padding">
