--- a/dataghost-app/partials/header.html
+++ b/dataghost-app/partials/header.html
@@ -18,16 +18,14 @@
           </ul>
         </div>
         <div id="dots">
-          <a href="#" ng-repeat="visual in body.main_visuals" class="dot" ng-class="{'active':body.isCurrentSlideIndex($index)}" ng-click="body.setCurrentSlideIndex($index);">
+          <a href="#" ng-repeat="visual in mainVisuals.main_visuals" class="dot" ng-class="{'active':mainVisuals.isCurrentSlideIndex($index)}" ng-click="body.setCurrentSlideIndex($index);">
             <i class="fa fa-circle-o"></i>
           </a>
         </div>
       </div>
       <div class="single-echo text">
         <div class="padding">
-        A ghost made out of data,<br>
-        persistent data,<br>
-        independent from it's source.
+          {{ body.single_echo }}
         </div>
       </div>
     </div>
