--- a/dataghost-app/partials/home.html
+++ b/dataghost-app/partials/home.html
@@ -1,5 +1,5 @@
 <section id="content" ng-controller="indexCtrl as ind">
   <div id="back-visuals">
-    <img ng-repeat="visual in body.main_visuals" ng-hide="!body.isCurrentSlideIndex($index)" src="{{ visual.url }}">
+    <img ng-repeat="visual in mainVisuals.main_visuals" ng-hide="!mainVisuals.isCurrentSlideIndex($index)" src="{{ visual.url }}">
   </div>
 </section>
