make main visuals into service

--- a/dataghost-app/css/style.css
+++ b/dataghost-app/css/style.css
@@ -156,6 +156,14 @@ body.index #ui-view {
   border-bottom:1px solid;
 }
 
+#dots {
+  display:none;
+}
+
+body.index #dots {
+  display:block;
+}
+
 #head .nav ul li a:hover,
 #dots a:hover {
   color:#787A7A;
